--- a/themes/purres/css/style.css
+++ b/themes/purres/css/style.css
@@ -340,6 +340,7 @@ p {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 .header {
@@ -368,6 +369,178 @@ p {
   transform: translateY(-50%);
 }
 
+/* report.scss */
+.grid {
+  display: grid;
+  gap: 1em 1em;
+}
+
+.wrapper h1 {
+  grid-column: span 3;
+  justify-self: center;
+}
+
+.wrapper {
+  max-width: 960px;
+  margin: 0 auto;
+  grid-template-columns: 30% 30% auto;
+  grid-template-rows: 200px 200px 200px 200px 200px 200px;
+}
+
+.kmom-box.project {
+  grid-column: span 3;
+  grid-row: 5/7;
+  margin-bottom: 2em;
+}
+
+.kmom-box {
+  border: 3px solid #ccc;
+  padding: 2em;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  grid-template-rows: repeat(5, 250px);
+  gap: 2em;
+  margin-bottom: 2em;
+}
+
+.grid-container h1 {
+  display: grid;
+  grid-column: span 3;
+  justify-content: left;
+  grid-column: 1/-1;
+  align-items: end;
+}
+
+.grid-item {
+  border: 1px solid rgb(179, 178, 178);
+  position: relative;
+  overflow: hidden;
+}
+.grid-item img {
+  width: 100%;
+}
+.grid-item h2 {
+  position: absolute;
+  padding: 1em 2em;
+  width: 100%;
+  margin: 0;
+}
+
+.grid-item:hover {
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.2);
+}
+
+.css h2 {
+  background-color: rgba(173, 216, 230, 0.7);
+  top: 0;
+  left: 0;
+}
+
+.git h2 {
+  background-color: rgba(36, 41, 47, 0.7);
+  bottom: 0;
+  left: 0;
+}
+
+.php h2 {
+  background-color: rgba(122, 134, 184, 0.7);
+  top: 0;
+  left: 0;
+}
+
+.html {
+  grid-column: 2/4;
+}
+.html h2 {
+  background-color: rgba(62, 63, 63, 0.7);
+  bottom: 0;
+  left: 0;
+}
+
+.javascript {
+  grid-column: 1/3;
+}
+.javascript h2 {
+  background-color: rgba(252, 220, 0, 0.7);
+  bottom: 0;
+  left: 0;
+}
+
+.python {
+  grid-column: 1/-1;
+}
+.python h2 {
+  background-color: rgba(30, 41, 51, 0.7);
+  bottom: 0;
+  left: 0;
+}
+
+.sqlite {
+  grid-column: 2/4;
+}
+.sqlite h2 {
+  background-color: rgba(4, 74, 100, 0.7);
+  bottom: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 992px) {
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .grid-item {
+    width: 100%;
+    height: 200px;
+  }
+}
+.tech-container {
+  display: grid;
+  grid-template-columns: 200px 600px;
+  grid-template-rows: 600px;
+  gap: 2em;
+  align-items: center;
+}
+
+.tech-sidebar a {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+  padding: 0.5em 1em;
+}
+
+.tech-sidebar h3 {
+  vertical-align: middle;
+}
+
+.sidebar-content {
+  height: 50px;
+  width: 100%;
+  transition: 0.3s;
+}
+
+.sidebar-content:hover {
+  background-color: rgba(51, 51, 51, 0.7);
+}
+.sidebar-content:hover h3 {
+  color: white;
+}
+
+@media screen and (max-width: 992px) {
+  .tech-sidebar {
+    display: none;
+  }
+  .tech-container {
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 100vh;
+    align-items: start;
+  }
+}
 .footer {
   padding: 1rem;
   background-color: #333;
