--- a/themes/purres/css/mobile-menu.css
+++ b/themes/purres/css/mobile-menu.css
@@ -41,7 +41,7 @@
         flex-direction: column;
     }
     .logo img {
-        width: 100%;
+        display: none;
     }
     .nav ul {
         flex-direction: column;
@@ -52,6 +52,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+        margin-bottom: 5px;
     }
 
     .nav ul li a {
