--- a/themes/purres/incl/footer.twig
+++ b/themes/purres/incl/footer.twig
@@ -12,6 +12,10 @@
             <span class="sr-only">{{ social.title }}</span>
         </a>
         {% endfor %}
+        <a href="?action=session_destroy">Destroy Session</a>
+        <a href="?action=theme">🌑</a>
+       
+
     </div>
 </div>
 
