--- a/themes/purres/scss/footer.scss
+++ b/themes/purres/scss/footer.scss
@@ -1,22 +1,30 @@
 .footer {
     padding: 1rem;
-    background-color: $background-alternative-color;
-
+    background-color: $header-footer-color;
+    
     p {
-        color: $font-alternative-color;
+        color: $font-color-alt;
     }
-
 }
 
 .social {
     float: right;
     font-size: $font-size * 2;
-
+    
     a {
         text-decoration: none;
+        color: $font-color-alt;
+        
+        :hover {
+            color: $li-active-hover-color;
+        }
     }
 
     i {
-        color: $font-alternative-color;
+        color: $font-color-alt;
+        
+        :hover {
+            color: $li-active-hover-color;
+        }
     }
 }
