--- a/themes/purres/scss/header.scss
+++ b/themes/purres/scss/header.scss
@@ -1,11 +1,11 @@
 .header {
-    background-color: #333;
+    background-color: $header-footer-color;
     width: 100%;
-
     a,
     p,
     h1 {
-        color: #fff;
+        color: $font-color-alt;
+        text-decoration: none;
     }
 }
 
@@ -23,4 +23,32 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    width: 200px;
+}
+
+.title {
+    padding: 0 2em;
+}
+
+.nav {
+    ul {
+    margin: 0;
+    }
+
+    li {
+        height: 100%;
+        display: block;
+    }
+    a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.5rem;
+    }
+    a:hover {
+        color: $li-active-hover-color;
+       }
+}
+
+.active a {
+    color: $li-active-hover-color;
 }
