--- a/themes/purres/scss/variables.scss
+++ b/themes/purres/scss/variables.scss
@@ -1,13 +1,15 @@
 $font-color: #000;
-$font-alternative-color: #fff;
-$accent-color: #ee6c4d;
-$background-color: #fff;
-$background-alternative-color: #333;
-
+$font-color-alt: #fff;
+$accent-color: #000;
+$background-color: #E6E6E6;
+$header-footer-color: #0F4628;
+$li-active-hover-color: #FFD80E;
+$content-background-color: #fff;
+$content-hover: rgba(51, 51, 51, 0.7);
 $line-height: 1.4;
 $font-size: 1.1rem;
-
+$border-color: #E6E6E6;
 $text-margin: $line-height * $font-size;
 
 $serif-font-family: 'Roboto Slab', serif;
-$sans-font-family: 'Roboto' sans-serif;
+$sans-font-family: 'Montserrat' sans-serif;
