--- a/themes/purres/scss/style.scss
+++ b/themes/purres/scss/style.scss
@@ -5,7 +5,9 @@
 @import 'header';
 @import 'report';
 @import 'technologies';
+@import 'gallery';
 @import 'technology';
+@import 'analysis';
 @import 'footer';
 @import 'blockquotes';
 @import 'code';
