--- a/themes/purres/scss/typography.scss
+++ b/themes/purres/scss/typography.scss
@@ -39,5 +39,5 @@ p {
     margin-top: 2em;
     margin-bottom: 2em;
     padding: 2em;
-    background-color: $content-background-color
+    background-color: $content-background-color;
 }
