--- a/themes/purres/scss/variables-dark.scss
+++ b/themes/purres/scss/variables-dark.scss
@@ -1,9 +1,9 @@
 $font-color: #fff;
 $font-color-alt: #fff;
 $accent-color: #161616;
-$background-color: #1F1F1F;
-$header-footer-color: #0A0A0A;
-$li-active-hover-color: #3568F5;
+$background-color: #1f1f1f;
+$header-footer-color: #0a0a0a;
+$li-active-hover-color: #3568f5;
 $content-background-color: #292929;
 $content-hover: rgba(252, 252, 252, 0.7);
 $border-color: #fff;
