--- a/themes/purres/css/style-dark.css
+++ b/themes/purres/css/style-dark.css
@@ -353,8 +353,8 @@ p {
 }
 
 .header {
-  background-color: #0A0A0A;
-  width: 100%;
+  background-color: #0a0a0a;
+  width: 100vw;
 }
 .header a,
 .header p,
@@ -392,16 +392,16 @@ p {
   display: block;
 }
 .nav a {
-  color: white;
+  color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
 }
 .nav a:hover {
-  color: #3568F5;
+  color: #3568f5;
 }
 
 .active a {
-  color: #3568F5;
+  color: #3568f5;
 }
 
 /* report.scss */
@@ -453,7 +453,10 @@ p {
   position: relative;
   overflow: hidden;
 }
-.grid-item img {
+.grid-item img,
+.grid-item embed,
+.grid-item object,
+.grid-item video {
   width: 100%;
 }
 .grid-item h2 {
@@ -521,7 +524,12 @@ p {
   left: 0;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
+  .grid-container {
+    grid-template-columns: repeat(3, 200px);
+  }
+}
+@media screen and (max-width: 667px) {
   .grid-container {
     display: flex;
     flex-direction: column;
@@ -530,6 +538,11 @@ p {
   .grid-item {
     width: 100%;
     height: 200px;
+  }
+}
+@media screen and (max-width: 667px) {
+  .grid-item {
+    width: 300px;
   }
 }
 .tech-container {
@@ -577,7 +590,7 @@ p {
 }
 .footer {
   padding: 1rem;
-  background-color: #0A0A0A;
+  background-color: #0a0a0a;
 }
 .footer p {
   color: #fff;
@@ -591,14 +604,16 @@ p {
   text-decoration: none;
   color: #fff;
 }
-.social a :hover {
-  color: #3568F5;
-}
 .social i {
   color: #fff;
 }
-.social i :hover {
-  color: #3568F5;
+
+.social a:hover {
+  color: #3568f5;
+}
+
+.social i:hover {
+  color: #3568f5;
 }
 
 blockquote {
@@ -6753,7 +6768,7 @@ readers do not read off random characters that represent icons */
 }
 
 body {
-  background-color: #1F1F1F;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
