--- a/themes/purres/css/style.css
+++ b/themes/purres/css/style.css
@@ -353,8 +353,8 @@ p {
 }
 
 .header {
-  background-color: #0F4628;
-  width: 100%;
+  background-color: #0f4628;
+  width: 100vw;
 }
 .header a,
 .header p,
@@ -392,16 +392,16 @@ p {
   display: block;
 }
 .nav a {
-  color: white;
+  color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
 }
 .nav a:hover {
-  color: #FFD80E;
+  color: #ffd80e;
 }
 
 .active a {
-  color: #FFD80E;
+  color: #ffd80e;
 }
 
 /* report.scss */
@@ -453,7 +453,10 @@ p {
   position: relative;
   overflow: hidden;
 }
-.grid-item img {
+.grid-item img,
+.grid-item embed,
+.grid-item object,
+.grid-item video {
   width: 100%;
 }
 .grid-item h2 {
@@ -521,7 +524,12 @@ p {
   left: 0;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
+  .grid-container {
+    grid-template-columns: repeat(3, 200px);
+  }
+}
+@media screen and (max-width: 667px) {
   .grid-container {
     display: flex;
     flex-direction: column;
@@ -532,6 +540,70 @@ p {
     height: 200px;
   }
 }
+@media screen and (max-width: 667px) {
+  .grid-item {
+    width: 300px;
+  }
+}
+.img-container {
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  grid-template-rows: repeat(5, 216px);
+  gap: 2em;
+  margin: 2em;
+  justify-content: center;
+}
+
+.img-item {
+  position: relative;
+  overflow: hidden;
+}
+.img-item img,
+.img-item embed,
+.img-item object,
+.img-item video {
+  max-width: 100%;
+}
+
+.img-container h1 {
+  display: grid;
+  grid-column: span 3;
+  justify-content: left;
+  grid-column: 1/-1;
+  align-items: end;
+}
+
+@media screen and (max-width: 900px) {
+  .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .img-item {
+    width: 100%;
+    height: 175px;
+  }
+}
+.yt-container {
+  height: 500px;
+  width: 100%;
+  margin-bottom: 2em;
+}
+
+.responsive-iframe {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.img-item:hover {
+  box-shadow: 0 0 15px 10px rgba(51, 51, 51, 0.7);
+}
+
 .tech-container {
   display: grid;
   grid-template-columns: 200px 600px;
@@ -575,9 +647,15 @@ p {
     align-items: start;
   }
 }
+.data {
+  width: 1000px;
+  height: 350px;
+  overflow: hidden;
+}
+
 .footer {
   padding: 1rem;
-  background-color: #0F4628;
+  background-color: #0f4628;
 }
 .footer p {
   color: #fff;
@@ -591,14 +669,16 @@ p {
   text-decoration: none;
   color: #fff;
 }
-.social a :hover {
-  color: #FFD80E;
-}
 .social i {
   color: #fff;
 }
-.social i :hover {
-  color: #FFD80E;
+
+.social a:hover {
+  color: #ffd80e;
+}
+
+.social i:hover {
+  color: #ffd80e;
 }
 
 blockquote {
@@ -6753,7 +6833,7 @@ readers do not read off random characters that represent icons */
 }
 
 body {
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
