--- a/themes/purres/scss/footer.scss
+++ b/themes/purres/scss/footer.scss
@@ -10,21 +10,21 @@
 .social {
     float: right;
     font-size: $font-size * 2;
-    
+
     a {
         text-decoration: none;
         color: $font-color-alt;
-        
-        :hover {
-            color: $li-active-hover-color;
-        }
     }
 
     i {
         color: $font-color-alt;
-        
-        :hover {
-            color: $li-active-hover-color;
-        }
     }
+}
+
+.social a:hover {
+    color: $li-active-hover-color;
+}
+
+.social i:hover {
+    color: $li-active-hover-color;
 }
