--- a/themes/purres/scss/header.scss
+++ b/themes/purres/scss/header.scss
@@ -1,6 +1,7 @@
 .header {
     background-color: $header-footer-color;
-    width: 100%;
+    width: 100vw;
+
     a,
     p,
     h1 {
@@ -32,21 +33,23 @@
 
 .nav {
     ul {
-    margin: 0;
+        margin: 0;
     }
 
     li {
         height: 100%;
         display: block;
     }
+
     a {
-        color: white;
+        color: #fff;
         text-decoration: none;
         font-size: 1.5rem;
     }
+
     a:hover {
         color: $li-active-hover-color;
-       }
+    }
 }
 
 .active a {
