--- a/themes/purres/scss/technologies.scss
+++ b/themes/purres/scss/technologies.scss
@@ -19,7 +19,10 @@
 
     overflow: hidden;
      
-    img {
+    img,
+    embed,
+    object,
+    video {
         width: 100%;
     }
 
@@ -101,7 +104,14 @@
 }
 
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 200px); 
+    }
+    
+}
+
+@media screen and (max-width: 667px) {
     .grid-container {
         display: flex;
         flex-direction: column;
@@ -111,5 +121,11 @@
     .grid-item {
         width: 100%;
         height: 200px;
+    }
+}
+
+@media screen and (max-width: 667px) {
+    .grid-item {
+        width: 300px;
     }
 }
