--- a/themes/purres/scss/variables.scss
+++ b/themes/purres/scss/variables.scss
@@ -1,14 +1,14 @@
 $font-color: #000;
 $font-color-alt: #fff;
 $accent-color: #000;
-$background-color: #E6E6E6;
-$header-footer-color: #0F4628;
-$li-active-hover-color: #FFD80E;
+$background-color: #e6e6e6;
+$header-footer-color: #0f4628;
+$li-active-hover-color: #ffd80e;
 $content-background-color: #fff;
 $content-hover: rgba(51, 51, 51, 0.7);
 $line-height: 1.4;
 $font-size: 1.1rem;
-$border-color: #E6E6E6;
+$border-color: #e6e6e6;
 $text-margin: $line-height * $font-size;
 
 $serif-font-family: 'Roboto Slab', serif;
