--- a/themes/purres/scss/analysis.scss
+++ b/themes/purres/scss/analysis.scss
@@ -3,3 +3,15 @@
     height: 350px;
     overflow: hidden;
 }
+
+.colors,
+.load,
+.design {
+    grid-row: 2 / 3;
+
+    h2 {
+        background-color: rgba(173, 216, 230, 0.7);
+        top: 0;
+        left: 0;
+    }
+}
