--- a/themes/purres/scss/typography.scss
+++ b/themes/purres/scss/typography.scss
@@ -12,8 +12,24 @@ h1 {
     font-family: $serif-font-family;
 }
 
+h2 {
+    font-size: 2rem;
+    margin-bottom: $text-margin * 2;
+    font-family: $serif-font-family;
+}
+
+a {
+    font-family: $serif-font-family;
+}
+
 h3 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
+    margin-bottom: $text-margin;
+    font-family: $sans-font-family;
+}
+
+h4 {
+    font-size: 1.3rem;
     margin: 0;
     font-family: $sans-font-family;
 }
