--- a/themes/purres/scss/variables.scss
+++ b/themes/purres/scss/variables.scss
@@ -12,4 +12,4 @@ $border-color: #e6e6e6;
 $text-margin: $line-height * $font-size;
 
 $serif-font-family: 'Roboto Slab', serif;
-$sans-font-family: 'Montserrat' sans-serif;
+$sans-font-family: 'Montserrat', sans-serif;
